[svn r1484] fixed padding (no worky on IE)

--- a/web/styles/sourcebans.css
+++ b/web/styles/sourcebans.css
@@ -443,7 +443,3 @@ ul#header_gameslist li{
 	float: left;
 	padding: 0 10px;
 }
-
-#style_selection {
-	padding-right:30%;
-}
